simplified crawling, now only crawling tweet, author and following accounts from author(id, name, username)